fix footer and sign-in page layout issue

--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,7 +1,7 @@
 .authentication-container {
     display: flex;
     width: 100vw;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 0;
     padding: 70px;
     height: 100vh;
