--- a/src/routes/footer/footer.styles.scss
+++ b/src/routes/footer/footer.styles.scss
@@ -3,14 +3,14 @@
     color: #eef4da;
     padding: 10px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     
     font-family: 'BioRhyme', serif;
     font-size: 12pt;
 
     .copyright {
-        margin-right: 25%;
+        margin-left: 42vw;
         display: inline-flex;
         gap: 5px;
         align-items: center;
